# reed-solomon-ccsds

./: .flake8  .gitignore  .mypy  .travis.yml  .yapf  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
reed_solomon_ccsds/: __init__.py  reed_solomon.py
tests/: test_reed_solomon.py
